PP: i conti tornano

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -506,7 +506,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 			\hline
 			Cunico Marco & Analis.  & Resp.-Amm.-Progett.-Program.  \\
 			\hline
-			Dal Bosco Davide & Analis.  & Resp.-Amm.-Progett.-Program.-Verif.  \\
+			Dal Bosco Davide & Analis.-Resp.  & Resp.-Amm.-Progett.-Program.-Verif.  \\
 			\hline
 			Dissegna Stefano & Analis.  & Resp.-Amm.-Progett.-Program.  \\
 			\hline
@@ -607,14 +607,14 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 		 \hline 
 		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
 		 \hline
-		Responsabile & 18 & 520 \\
+		Responsabile & 18 & 540 \\
 		Amministratore & 44 & 880\\
-		Analista & 86 & 2125\\
+		Analista & 86 & 2150\\
 		Progettista & 39 & 858\\
 		Programmatore & 0 & 0 \\
 		Verificatore & 28 & 448\\
         \hline
-        \textbf{Totale} & \textbf{215} & \textbf{4831}\\
+        \textbf{Totale} & \textbf{215} & \textbf{4876}\\
 		\hline
 		\end{tabular}
 	\caption{Consuntivo RR-RPP} 
@@ -647,19 +647,19 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 			\hline
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 								     %  RESP    % AMMIN  %  ANALISTA  %  PROGET. %  PROGRAM %    VERIF.   % TOTALE
-			Bizzotto Piero &  6   &  13 &  0   &   28  &  0   &  0  &  47 \\ % R4
+			Bizzotto Piero &  6   &  13 &  0   &   26  &  0   &  0  &  45 \\ % R4
 			\hline
-			Carollo Mirko &  8   &  24  &  0  &  11   &  0   &  0   &  43\\ % R5
+			Carollo Mirko &  8   &  24  &  0  &  9   &  0   &  0   &  41\\ % R5
 			\hline
-			Cunico Marco    &  0   &  0  &  29   &  0   &  0  &  0   &  29\\ % R2
+			Cunico Marco    &  0   &  0  &  25   &  0   &  0  &  0   &  25\\ % R2
 			\hline
-			Dal Bosco Davide   &  0   &  0   &  12   &  0   &   0  &  0  &  12\\ % R1
+			Dal Bosco Davide   &  2   &  0   &  9   &  0   &   0  &  0  &  11\\ % R1
 			\hline
-			Dissegna Stefano        &  0  &  0   & 27  &  0   &  0  &  0  &  27\\ % R6
+			Dissegna Stefano        &  0  &  0   & 23  &  0   &  0  &  0  &  23\\ % R6
 			\hline
-			Geremia Mirco   &   2  &  6   &  13  &  0  &  0   &  26   &  47\\ % R7
+			Geremia Mirco   &   2  &  7   &  9  &  0  &  0   &  17   &  35\\ % R7
 			\hline	
-			Rizzo Maurizio  &  0  &  0  &  20  &  10  &  0  &  15  &  45 \\ %R3
+			Rizzo Maurizio  &  0  &  0  &  16  &  4  &  0  &  11  &  31 \\ %R3
 			\hline	
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
