--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -263,7 +263,7 @@ Il progetto architetturale dovr\`a essere controllato secondo le seguenti caratt
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item Aderenza alle \textit{NormeDiProgetto}.
 \item Completezza: per controllare l'aderenza ai requisiti, dovr\`a essere verificata la tracciabilit\`a tra ogni requisito e la parte, o le parti, che lo soddisfano nel progetto.
-\item Sufficienza: ogni elemento del progetto dovr\`a, o soddissfare un requisito, o essere una dipendenza, diretta o indiretta, di un elemento necessario a soddisfare un requisito, in modo che nessuna parte del progetto risulti superflua.
+\item Sufficienza: ogni elemento del progetto dovr\`a, o soddisfare un requisito, o essere una dipendenza, diretta o indiretta, di un elemento necessario a soddisfare un requisito, in modo che nessuna parte del progetto risulti superflua.
 \item Estendibilit\`a e manutenibilit\`a: il progetto dovr\`a prevedere la possibilit\`a che il prodotto possa essere facilmente esteso e mantenuto in futuro.
 \item Scalabilit\`a: considerata la necessit\`a da parte dell'applicazione di un server, la fase di progettazione dovr\`a assicurare che il server sia in grado di gestire un numero elevato di client contemporaneamente senza che l'utente noti problemi di performance.
 \end{elenconumerato}
@@ -314,7 +314,7 @@ Il verificatore o chiunque altro esegui questo test dovr\`a constatare che tutte
 \end{elenconumerato}
 
 \subsezione{Metriche di automazione}
-Per determinare il numero di test da effettuare su un porzione di software da testare verr\`a considerata la \textit{complessit\`a ciclomatica} di tale pezzo di codice, ossia la metrica strutturale relativa al flusso di controllo. L'azienda ritiene che tale metrica descriva in maniera abbastanza precisa lo sforzo impiegato per realizzare e comprendere una porzione di software. E' compito del verificatore utilizzare tale metrica e stimare il numero di test necessari.
+Per determinare il numero di test da effettuare su una porzione di software da testare verr\`a considerata la \textit{complessit\`a ciclomatica} di tale pezzo di codice, ossia la metrica strutturale relativa al flusso di controllo. L'azienda ritiene che tale metrica descriva in maniera abbastanza precisa lo sforzo impiegato per realizzare e comprendere una porzione di software. E' compito del verificatore utilizzare tale metrica e stimare il numero di test necessari.
 
 
  
