--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -748,6 +748,174 @@ Si pu\`o notare dai dati che in generale \`e stato richiesto un impegno leggerme
 \subsubsezione{Implicazioni del consuntivo}
 In questa fase il progetto \`e in fase di completamento e ci si aspetta un lavoro nella fase seguente per quel che riguarda la codifica e la relativa verifica. Il preventivo relativo alla fase RQ-RA \`e stato quindi aggiornato per questo motivo, e soprattutto per l'acquisizione e l'integrazione di un nuovo membro all'interno dell'azienda.
 
+\newpage
+
+\subsezione{Fase RQ-RA}
+\begin{table}[h]
+	\begin{center}
+		  \begin{tabular}{|c|c|c|c|}
+		 \hline 
+		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
+		 \hline
+		Responsabile & 10 & 300 \\
+		Amministratore & 13 & 260\\
+		Analista & 0 & 0\\
+		Progettista & 11 & 242\\
+		Programmatore & 17 & 272\\
+		Verificatore & 26 & 416\\
+        \hline
+        \textbf{Totale} & \textbf{77} & \textbf{1490}\\
+		\hline
+		\end{tabular}
+	\caption{Consuntivo RQ-RA} 
+	\label{tab:cons_RPP-RQ}
+	\end{center}	
+\end{table}
+
+\begin{center}\textbf{Ore/Ruolo}
+\end{center}
+\includegraphics[width=300pt]{Cons-RQ-RA1}
+\newpage
+
+\begin{center}\textbf{Costo/Ruolo}
+\end{center}
+\includegraphics[width=350pt]{Cons-RQ-RA2}
+
+
+\begin{table}[!h]
+	\begin{center}
+		  \begin{tabular}
+			  {|c|c|c|c|c|c|c|c|}
+		 \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%			\multicolumn{3}{|c|}{ \multirow{2}{*}{ FASE RQ - RA} } \\
+			\multicolumn{8}{|c|}{ \textbf{Consuntivo Ore/Ruolo} } \\
+			\hline
+			\textbf{Componente} & \multicolumn{7}{|c|}{ \textbf{RUOLO} } \\
+			\hline
+			& \textbf{Resp.} & \textbf{Amm.} & \textbf{Analis.} & \textbf{Progett.} & \textbf{Program.} & \textbf{Verif.}  & \textbf{Totale}\\
+			\hline
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+							%RESP    % AMMIN  %  ANALISTA  %  PROGET. %  PROGRAM %    VERIF.   % TOTALE
+			Bizzotto Piero 		&  2  &  6  &  0  &  0  &  0 &  0 &  8 \\ % R4
+			\hline
+			Carollo Mirko 		&  0  &  0  &  0 &  0  &  0 &  2 &  2\\ % R5
+			\hline
+			Cunico Marco    	&  0  &  5 &  0  &  0 &  8 &  3  &  16\\ % R2
+			\hline
+			Dal Bosco Davide   	&  0  &  2  &  0  &  0 &  6 &  0 &  8\\ % R1
+			\hline
+			Dissegna Stefano    &  8  &  0 &  0  &  2 &  0 &  3  &  13\\ % R6
+			\hline
+			Geremia Mirco   	&  0  &  0  &  0  &  9 &  3 &  0  &  12\\ % R7
+			\hline	
+			Rizzo Maurizio  	&  0  &  0 &  0  &  0  &  0 &  18  &  18\\ %R3
+			\hline	
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		\end{tabular}
+	\caption{Consuntivo carico/persona RQ-RA} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\label{tab: ConsPersOre_RPP-RQ}
+	\end{center}	
+\end{table}
+
+Si pu\`o notare dai dati che in generale \`e stato richiesto un impegno maggiore rispetto a quanto previsto, da giustificare..
+
+\newpage
+\sezione{Consuntivo di fine progetto}
+In questa tabella vengono visualizzati i dati consuntivi delle ore dell'intero svolgimento
+del progetto.
+
+\begin{table}[!h]
+	\begin{center}
+		  \begin{tabular}
+			  {|c|c|c|c|c|c|c|c|}
+		 \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%			\multicolumn{3}{|c|}{ \multirow{2}{*}{ FASE RQ - RA} } \\
+			\multicolumn{5}{|c|}{ \textbf{Consuntivo Ore/Ruolo divise per fase} } \\
+			\hline
+			 & \multicolumn{3}{|c|}{ \textbf{FASI} } & \\
+			\hline
+			\textbf{Ruolo} & \textbf{RR-RPP} & \textbf{RPP-RQ} & \textbf{RQ-RA} & \textbf{Totale}\\
+			\hline
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			Responsabile 		&  18  &  31  &  10  &  59 \\ % R4
+			\hline
+			Amministratore 		&  44  &  42  &  13 &  99\\ % R5
+			\hline
+			Analista   	&  86  &  12 &  0  &  98\\ % R2
+			\hline
+			Progettista   	&  39  &  82  &  11  &  132\\ % R1
+			\hline
+			Programmatore    &  0  &  103 &  17  &  120\\ % R6
+			\hline
+			Verificatore   	&  28  &  97  &  26  &  151\\ % R7
+			\hline		
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		\end{tabular}
+	\caption{Consuntivo carico/fase Totale} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\label{tab: ConsCaricoFase_Totale}
+	\end{center}	
+\end{table}
+%%%Costo in Euro   	&  4876  &  7074  &  1490  &  13440\\ % R7
+
+\begin{table}[!h]
+	\begin{center}
+		  \begin{tabular}
+			  {|c|c|c|c|c|c|c|c|}
+		 \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%			\multicolumn{3}{|c|}{ \multirow{2}{*}{ FASE RQ - RA} } \\
+			\multicolumn{8}{|c|}{ \textbf{Consuntivo Ore/Ruolo} } \\
+			\hline
+			\textbf{Componente} & \multicolumn{7}{|c|}{ \textbf{RUOLO} } \\
+			\hline
+			& \textbf{Resp.} & \textbf{Amm.} & \textbf{Analis.} & \textbf{Progett.} & \textbf{Program.} & \textbf{Verif.}  & \textbf{Totale}\\
+			\hline
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+							%RESP    % AMMIN  %  ANALISTA  %  PROGET. %  PROGRAM %    VERIF.   % TOTALE
+			Bizzotto Piero 		&  8  &  19  &  4  &  26  &  13 &  28 &  98 \\ % R4
+			\hline
+			Carollo Mirko 		&  8  &  24  &  12 &  9  &  10 &  33 &  96\\ % R5
+			\hline
+			Cunico Marco    	&  7  &  16 &  25  &  23 &  24 &  3  &  98\\ % R2
+			\hline
+			Dal Bosco Davide   	&  10  &  7  &  9  &  16 &  17 &  38 &  97\\ % R1
+			\hline
+			Dissegna Stefano    &  16  &  10 &  23  &  22 &  23 &  3  &  97\\ % R6
+			\hline
+			Geremia Mirco   	&  2  &  7  &  9  &  32 &  21 &  17  &  88\\ % R7
+			\hline	
+			Rizzo Maurizio  	&  8  &  16 &  16  &  4  &  12 &  29  &  85\\ %R3
+			\hline	
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		\end{tabular}
+	\caption{Consuntivo carico/persona Totale} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\label{tab: ConsPersOre_Totale}
+	\end{center}	
+\end{table}
+
+\begin{table}[h]
+	\begin{center}
+		  \begin{tabular}{|c|c|c|c|}
+		 \hline 
+		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
+		 \hline
+		Responsabile & 59 & 1770 \\
+		Amministratore & 99 & 1980\\
+		Analista & 98 & 2450\\
+		Progettista & 132 & 2904\\
+		Programmatore & 120 & 1920\\
+		Verificatore & 151 & 2416\\
+        \hline
+        \textbf{Totale} & \textbf{659} & \textbf{13440}\\
+		\hline
+		\end{tabular}
+	\caption{Consuntivo Totale} 
+	\label{tab:cons_Totale}
+	\end{center}	
+\end{table}
+
 
 \sezione{Gestione del Piano di Progetto}
 \subsezione{Obiettivi}
