test lettura testo

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -92,7 +92,10 @@ Il presente documento descrive in modo dettagliato le classi e i relativi metodi
 				& Rizzo Maurizio \\
 				
 				\hline
-				\multirow{1}{*}{RQ-RA} & \\
+				\multirow{4}{*}{RQ-RA} & Dissegna Stefano \\
+                                & Bizzotto Piero \\
+                                & Rizzo Maurizio \\
+                                & Dal Bosco Davide \\
 												
 				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -119,7 +122,7 @@ Il presente documento descrive in modo dettagliato le classi e i relativi metodi
 			\multirow{1}{*}{RPP-RQ} &  Carollo Mirko \\
 									
 			\hline
-			\multirow{1}{*}{RQ-RA} & \\
+			\multirow{1}{*}{RQ-RA} & Cunico Marco \\
 									
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -145,7 +148,7 @@ Il presente documento descrive in modo dettagliato le classi e i relativi metodi
 			\multirow{1}{*}{RPP-RQ} &  Dissegna Stefano \\
 									
 			\hline
-			\multirow{1}{*}{RQ-RA} & \\
+			\multirow{1}{*}{RQ-RA} & Carollo Mirko \\
 									
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
