--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{3.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{4.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -89,6 +89,8 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 				\hline
 				RPP-RQ & Geremia Mirco\\
 				\hline
+				RQ-RA & Cunico Marco \\
+				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
 			\caption{Lista Redattori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
@@ -116,6 +118,9 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 			\hline
 			RPP-RQ & Carollo Mirko \\									
 			\hline
+			RQ-RA & Rizzo Maurizio \\
+			\hline
+
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 		\caption{Lista Verificatori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
@@ -142,6 +147,9 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 			\hline
 			RPP-RQ & Rizzo Maurizio \\
 			\hline
+			RQ-RA & Dissegna Stefano \\
+			\hline
+
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 		\caption{Lista Approvatori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
@@ -174,7 +182,9 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-			3.1 & 19/03/2009 Modifiche al consuntivo fase RPP-RQ & \\
+			4.0 & 22/03/2009 Modifiche per rilascio RA & Cunico Marco \\
+			\hline
+			3.1 & 19/03/2009 Modifiche al consuntivo fase RPP-RQ & Cunico Marco \\
 			\hline
 			3.0 & 07/03/2009 Verifica in preparazione al rilascio & Geremia Mirco\\
 			\hline
