--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -122,6 +122,9 @@ Il presente documento descrive le strategie per la verifica della correttezza de
       RPP-RQ & Bizzotto Piero \\
                   
       \hline
+      RQ-RA & Rizzo Maurizio \\
+                  
+      \hline
       %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
     \caption{Lista Verificatori} %INSERIRE DIDASCALIA - SE NECESSARIA -
@@ -152,6 +155,10 @@ Il presente documento descrive le strategie per la verifica della correttezza de
       RPP-RQ & Dal Bosco Davide \\
                   
       \hline
+      RQ-RA & Geremia Mirco \\
+                  
+      \hline
+
       %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
     \caption{Lista Approvatori} %INSERIRE DIDASCALIA - SE NECESSARIA -
