PQ: cambiato approvatore

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -155,7 +155,7 @@ Il presente documento descrive le strategie per la verifica della correttezza de
       RPP-RQ & Dal Bosco Davide \\
                   
       \hline
-      RQ-RA & Geremia Mirco \\
+      RQ-RA & Bizzotto Piero \\
                   
       \hline
 
