Lettera di presentazione per RA

--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -2,7 +2,7 @@
 \usepackage{multirow}
 \begin{document}
 
-\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{3.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Lettera di Presentazione} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 
 \begin{titlepage}
@@ -54,12 +54,12 @@ Alla cortese attenzione dei committenti :
 \item Azienda Zucchetti SPA , nella veste di proponente
 \end{list}
 
-Con la presente la ditta WebShape consegna il materiale necessario a sostenere la Revisione di Qualifica. \\
-In particolare sono stati aggiornati alcuni documenti in seguito all'esito della Revisione di Progetto Preliminare, e se ne sono aggiunti altri come previsto dal processo di documentazione. Si allega inoltre il codice in fase di conclusione: \`e possibile provare il prodotto aprendo il file ajaxdraw/page/index.html con un browser supportato; tuttavia, mancando il collegamento con il server, non \`e possibile avvalersi delle funzionalit\`a di caricamento e salvataggio files.
+Con la presente la ditta WebShape consegna il materiale necessario a sostenere la Revisione di Accettazione. \\
+In particolare sono stati aggiornati alcuni documenti in seguito all'esito della Revisione di Qualifica. Si allega inoltre il prodotto software finale, comprensivo di sorgenti, test e di due file \textit{war} per l'installazione del prodotto.
 
 
 \section{Materiale consegnato}
-Per la Revisione di Qualifica si consegna il seguente materiale: 
+Per la Revisione di Accettazione si consegna il seguente materiale: 
 \subsection{Documenti interni}
 \begin{list}{-}{}
 \item Norme di progetto (NormeDiProgetto3.0.pdf)
@@ -67,14 +67,14 @@ Per la Revisione di Qualifica si consegna il seguente materiale:
 \subsection{Documenti esterni}
 \begin{list}{-}{}
 \item Analisi dei requisiti (AnalisiDeiRequisiti3.0.pdf)
-\item Definizione di prodotto (DefinizioneDiProdotto1.0.pdf)
+\item Definizione di prodotto (DefinizioneDiProdotto2.0.pdf)
 \item Diagramma di Gantt per le attivit\`a (Pianifica.png)
 \item Diagramma di Gantt per le risorse (PianificaRisorse.png)
 \item Glossario (Glossario3.0.pdf)
 \item Lettera di presentazione (LetteraDiPresentazione.pdf)
-\item Manuale utente (ManualeUtente1.0.pdf)
-\item Piano di progetto (PianoDiProgetto3.0.pdf)
-\item Piano di qualifica (PianoDiQualifica3.0.pdf)
+\item Manuale utente (ManualeUtente2.0.pdf)
+\item Piano di progetto (PianoDiProgetto4.0.pdf)
+\item Piano di qualifica (PianoDiQualifica4.0.pdf)
 \item Specifica tecnica (SpecificaTecnica2.0.pdf)
 \end{list}
 \subsection{Codice sorgente}
